@@ -5319,6 +5319,7 @@ condition|;
 name|i
 operator|++
 control|)
+block|{
 name|freeByteBlocks
 operator|.
 name|add
@@ -5329,6 +5330,14 @@ name|i
 index|]
 argument_list|)
 expr_stmt|;
+name|blocks
+index|[
+name|i
+index|]
+operator|=
+literal|null
+expr_stmt|;
+block|}
 block|}
 block|}
 annotation|@
@@ -5375,6 +5384,7 @@ condition|;
 name|i
 operator|++
 control|)
+block|{
 name|freeByteBlocks
 operator|.
 name|add
@@ -5387,6 +5397,16 @@ name|i
 argument_list|)
 argument_list|)
 expr_stmt|;
+name|blocks
+operator|.
+name|set
+argument_list|(
+name|i
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 block|}
 block|}
@@ -5542,6 +5562,7 @@ condition|;
 name|i
 operator|++
 control|)
+block|{
 name|freeIntBlocks
 operator|.
 name|add
@@ -5552,6 +5573,14 @@ name|i
 index|]
 argument_list|)
 expr_stmt|;
+name|blocks
+index|[
+name|i
+index|]
+operator|=
+literal|null
+expr_stmt|;
+block|}
 block|}
 DECL|field|byteBlockAllocator
 name|ByteBlockAllocator
